[project]
name = "tina"
version = "0.1.0"
description = ""
authors = [
    {name = "darthShana",email = "darthShana@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langgraph (>=0.2.69,<0.3.0)",
    "langchain-core (>=0.3.34,<0.4.0)",
    "langchain-openai (>=0.3.4,<0.4.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "boto3 (>=1.36.15,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "html5lib (>=1.1,<2.0)",
    "poetry-plugin-dotenv (>=2.6.1,<3.0.0)",
    "langsmith (>=0.3.6,<0.4.0)",
    "langchain-voyageai (>=0.1.4,<0.2.0)",
    "langchain-pinecone (>=0.2.2,<0.3.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "tavily-python (>=0.5.1,<0.6.0)",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
